--- a/app/src/main/res/layout/items_notes.xml
+++ b/app/src/main/res/layout/items_notes.xml
@@ -1,39 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="10dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="0dp"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardview"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintRight_toLeftOf="@id/deletebutton"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:padding="12dp"
-        android:textSize="16sp"
-        android:paddingTop="15dp"
-        tools:text="Manas"
-        android:textColor="#212121"
-        android:background="#9FE6EF"
-        />
+        app:cardCornerRadius="18dp"
+        app:cardElevation="0dp"
+        app:cardPreventCornerOverlap="true"
+        app:cardUseCompatPadding="true">
 
-    <ImageView
-        android:id="@+id/deletebutton"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:padding="11dp"
-        app:layout_constraintTop_toTopOf="@id/text"
-        app:layout_constraintBottom_toBottomOf="@id/text"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/text"
-        android:src="@drawable/ic_baseline_delete_forever_24"
-        android:background="#9FE6EF"
-        />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+            <TextView
+                android:id="@+id/text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintRight_toLeftOf="@id/deletebutton"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:padding="12dp"
+                android:textSize="16sp"
+                android:paddingTop="15dp"
+                tools:text="Manas"
+                android:textColor="#212121"
+                android:background="#9FE6EF"
+                />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageView
+                android:id="@+id/deletebutton"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:padding="11dp"
+                app:layout_constraintTop_toTopOf="@id/text"
+                app:layout_constraintBottom_toBottomOf="@id/text"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/text"
+                android:src="@drawable/ic_baseline_delete_forever_24"
+                android:background="#9FE6EF"
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+</LinearLayout>
 
